@@ -1,12 +1,11 @@
 package org.jabref.gui.desktop.os;
 
-import java.awt.Desktop;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Optional;
 
 import org.jabref.architecture.AllowedToUseAwt;
+import org.jabref.gui.DialogService;
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
 
@@ -29,17 +28,18 @@ public class OSX implements NativeDesktop {
         // Use "-a <application>" if the app is specified, and just "open <filename>" otherwise:
         String[] cmd = (application != null) && !application.isEmpty() ? new String[] {"/usr/bin/open", "-a",
                 application, filePath} : new String[] {"/usr/bin/open", filePath};
-        Runtime.getRuntime().exec(cmd);
+        new ProcessBuilder(cmd).start();
     }
 
     @Override
     public void openFolderAndSelectFile(Path file) throws IOException {
-        Desktop.getDesktop().open(file.getParent().toFile());
+        String[] cmd = {"/usr/bin/open", "-R", file.toString()};
+        Runtime.getRuntime().exec(cmd);
     }
 
     @Override
-    public void openConsole(String absolutePath) throws IOException {
-        Runtime.getRuntime().exec("open -a Terminal " + absolutePath, null, new File(absolutePath));
+    public void openConsole(String absolutePath, DialogService dialogService) throws IOException {
+         new ProcessBuilder("open", "-a", "Terminal", absolutePath).start();
     }
 
     @Override
